Added Swagger docs to reservation operations
